--- a/index.html
+++ b/index.html
@@ -6,14 +6,22 @@
     <title>videos de highlight </title>
 </head>
 <body>
-    <h1>  apelapato 2019 Agachadinha Contra Famosos 2 </h1>
+  
 
 
 
     <div> 
-
+        <h1>  apelapato 2019 Agachadinha Contra Famosos 2 </h1>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/-aEfXkLgzeE?si=zUSEs-XrOWYzXljU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <p>xdbusbgudybgu8dy</p>
+        O pensamento computacional pode ser definido como uma habilidade para resolver problemas e desafios de forma eficiente, assim como um computador faria.
+
+Essa resolução pode ou não envolver equipamentos tecnológicos, mas a sua base é a exploração de forma criativa, crítica e estratégica dos domínios computacionais.
+
+Usar o pensamento computacional é ver um desafio ou problema, refletir sobre ele, separá-lo em partes, resolver cada uma dessas partes da maneira mais lógica e assertiva para depois chegar a um resultado final.
+
+“O Pensamento Computacional é uma distinta capacidade criativa, crítica e estratégica humana de saber utilizar os fundamentos da Computação, nas mais diversas áreas do conhecimento, com a finalidade de identificar e resolver problemas, de maneira individual ou colaborativa, através de passos claros, de tal forma que uma pessoa ou uma máquina possam executá-los”
+
+Christian Brackmann, doutor em Informática na Educação
         
         
     </div>
