--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <h1> video de pesnsamento computacional</h1>
          <iframe width="560" height="315" src="https://www.youtube.com/embed/pRpjYrdb9UY?si=cOxxk3lT89WLlpWX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-          O pensamento computacional pode ser definido como uma habilidade para resolver problemas e desafios de forma eficiente, assim como um computador faria.
+          <p>O pensamento computacional pode ser definido como uma habilidade para resolver problemas e desafios de forma eficiente, assim como um computador faria.
 
 Essa resolução pode ou não envolver equipamentos tecnológicos, mas a sua base é a exploração de forma criativa, crítica e estratégica dos domínios computacionais.
 
@@ -23,7 +23,7 @@ Usar o pensamento computacional é ver um desafio ou problema, refletir sobre el
 
 “O Pensamento Computacional é uma distinta capacidade criativa, crítica e estratégica humana de saber utilizar os fundamentos da Computação, nas mais diversas áreas do conhecimento, com a finalidade de identificar e resolver problemas, de maneira individual ou colaborativa, através de passos claros, de tal forma que uma pessoa ou uma máquina possam executá-los”
 
-Christian Brackmann, doutor em Informática na Educação
+Christian Brackmann, doutor em Informática na Educação</p>
         
         
     </div>
